cmake_minimum_required(VERSION 3.1)

project(ProgrammingBasics VERSION 0.1
                          DESCRIPTION "清华大学-程序设计基础"
                          LANGUAGES CXX)

add_subdirectory(ch-1)
add_subdirectory(ch-2)
add_subdirectory(ch-3)
add_subdirectory(ch-4)
add_subdirectory(ch-5)
add_subdirectory(ch-6)