cmake_minimum_required(VERSION 3.1)

project(ProgrammingBasics VERSION 0.1
                          DESCRIPTION "清华大学-程序设计基础&面向对象程序设计"
                          LANGUAGES CXX)

add_subdirectory(ch-1)
add_subdirectory(ch-2)
add_subdirectory(ch-3)
add_subdirectory(ch-4)
add_subdirectory(ch-5)
add_subdirectory(ch-6)
add_subdirectory(ch3-oop)
add_subdirectory(ch4-oop)
add_subdirectory(ch8-oop)
add_subdirectory(final_exam)
add_subdirectory(final_dsa)
add_subdirectory(cpp-ch2)
add_subdirectory(cpp-ch3)
add_subdirectory(cpp-ch4)
add_subdirectory(cpp-ch5)