add_executable(prime prime.cpp)
add_executable(children children.cpp)
add_executable(binary_search binary_search.cpp)
add_executable(insert_sort insert_sort.cpp)
add_executable(select_sort select_sort.cpp)
add_executable(joseph joseph.cpp)
add_executable(max2 max2.cpp)
add_executable(prime_factor prime_factor.cpp)
add_executable(password password.cpp)
add_executable(exercise1 exercise1.cpp)